--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ psycopg2==2.5.4
 facepy==1.0.4
 fandjango==4.2
 django-tables2==0.15.0
-django-json-field=0.5.7
-django-jsonfield=0.9.13
+django-json-field==0.5.7
+django-jsonfield==0.9.13
